2002-07-05  jacob berkman  <jacob@ximian.com>

	* theme-switcher.c (transfer_done_cb): do the real work in an idle
	(transfer_done_idle_cb): do the real work

	this fixes bug #86141 - i don't understand why, but some very evil
	things seem to have been happening.  see that bug for details.

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-05-28  Satyajit Kanungo <satyajit.kanungo@wipro.com>
        * theme-switcher.c : Changed the help file link
          to get the help document from user-guide.

2002-05-26  Jody Goldberg <jody@gnome.org>

	* theme-switcher.c (install_dialog_response) : improve handling of
	  help failures.
	(cb_dialog_response) : ditto.

Sun May 26 11:34:31 2002  Jonathan Blandford  <jrb@gnome.org>

	* theme-switcher.c (main): use APPID instead of argv[0]

2002-05-16  Jody Goldberg <jody@gnome.org>

	* theme-switcher.c (install_dialog_response) : add some safety checks
	  for invalid files.

2002-05-16  Jody Goldberg <jody@gnome.org>

	* theme-switcher.c (cb_dialog_response) : fix path.
	(install_dialog_response) : add help link.

Tue May 14 12:29:35 2002  Jonathan Blandford  <jrb@redhat.com>

	* theme-switcher.c (read_themes): try to scroll to theme.
	Currently appears to be a little broken somewhere.

	* theme-properties.glade: clean up, and add an atk relation, #76416

2002-05-10  Anders Carlsson  <andersca@gnu.org>

	* theme-properties.glade:
	Remove ellipsis after "Go to theme folder".
	
	* theme-switcher.c: (show_manage_themes):
	Create the .themes directory if it doesn't exist.
	
2002-05-10  Anders Carlsson  <andersca@gnu.org>

	* theme-properties.glade:
	Remove ellipsis after "Go to theme folder".
	
	* theme-switcher.c: (show_manage_themes):
	Create the .themes directory if it doesn't exist.
	
2002-05-08  Jody Goldberg <jody@gnome.org>

	* theme-switcher.c (cb_dialog_response) : new.
	(setup_dialog) : support help.

Mon May  6 17:40:17 2002  Jonathan Blandford  <jrb@redhat.com>
