@@ -1,3 +1,8 @@
+2002-07-10  Jody Goldberg <jody@gnome.org>
+
+	* theme-switcher.c (show_install_dialog) : create and destroy the
+	  dialog.
+
 2002-07-05  jacob berkman  <jacob@ximian.com>
 
 	* theme-switcher.c (transfer_done_cb): do the real work in an idle
